tests/fixtures/invalid/pow_list_dict_bool.py
# Cannot call pow() with List[int], Dict[str, int], Bool
x = pow([1, 2, 3], {"a": 1}, True)
